Restored opaque background to progress wheels. #340

--- a/briar-android/res/layout/activity_with_loading.xml
+++ b/briar-android/res/layout/activity_with_loading.xml
@@ -22,12 +22,14 @@
 		<FrameLayout
 			android:id="@+id/content_fragment"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"/>
+			android:layout_height="match_parent"
+			android:background="@color/window_background"/>
 
 		<RelativeLayout
 			android:id="@+id/container_progress"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
+			android:background="@color/window_background"
 			android:layout_gravity="center"
 			android:visibility="invisible"
 			tools:visibility="visible">
