New List of Forums
The adapter of the `ForumListFragment` has been changed into a
`BriarRecyclerView` and all its code has been adapted and simplified
accordingly.

All UI of the forum list is now defined in XML layouts.

--- a/briar-android/res/layout/briar_recycler_view.xml
+++ b/briar-android/res/layout/briar_recycler_view.xml
@@ -24,6 +24,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerInParent="true"
+		android:padding="@dimen/margin_activity_horizontal"
 		android:textSize="@dimen/text_size_large"
 		android:text="@string/no_data"/>
 
