--- a/briar-android/res/layout/fragment_forum_list.xml
+++ b/briar-android/res/layout/fragment_forum_list.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<org.briarproject.android.util.BriarRecyclerView
-	android:id="@+id/forumList"
+<android.support.design.widget.CoordinatorLayout
+	android:id="@+id/coordinatorLayout"
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"/>
+	android:layout_height="match_parent">
+
+	<org.briarproject.android.util.BriarRecyclerView
+		android:id="@+id/forumList"
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		app:layout_behavior="org.briarproject.android.util.BriarRecyclerViewBehavior"/>
+
+</android.support.design.widget.CoordinatorLayout>
