--- a/briar-android/res/layout/list_item_forum.xml
+++ b/briar-android/res/layout/list_item_forum.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
@@ -9,6 +10,15 @@
 	android:paddingTop="@dimen/listitem_horizontal_margin"
 	android:background="?attr/selectableItemBackground">
 
+	<org.briarproject.android.util.TextAvatarView
+		android:id="@+id/avatarView"
+		android:layout_height="@dimen/avatar_forum_size"
+		android:layout_width="@dimen/avatar_forum_size"
+		android:layout_marginRight="@dimen/listitem_horizontal_margin"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true"
+		/>
+
 	<TextView
 		android:id="@+id/forumNameView"
 		android:layout_width="wrap_content"
@@ -16,21 +26,23 @@
 		android:maxLines="2"
 		android:textColor="@color/briar_text_primary"
 		android:textSize="@dimen/text_size_medium"
-		tools:text="This is a name of a forum"/>
+		tools:text="This is a name of a forum"
+		android:layout_alignParentTop="true"
+		android:layout_toRightOf="@+id/avatarView"
+		android:layout_toEndOf="@+id/avatarView"/>
 
 	<TextView
 		android:id="@+id/unreadView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true"
-		android:layout_below="@+id/forumNameView"
-		android:layout_toLeftOf="@+id/dateView"
 		android:paddingTop="@dimen/margin_medium"
 		android:paddingBottom="@dimen/listitem_horizontal_margin"
 		android:textColor="@color/briar_text_secondary"
 		android:textSize="@dimen/text_size_small"
-		android:text="@string/no_unread_posts"/>
+		android:text="@string/no_unread_posts"
+		android:layout_below="@+id/forumNameView"
+		android:layout_toRightOf="@+id/avatarView"
+		android:layout_toEndOf="@+id/avatarView"/>
 
 	<TextView
 		android:id="@+id/dateView"
