--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -18,7 +18,7 @@
 	<color name="horizontal_border">#CCCCCC</color>
 	<color name="forums_available_background">@color/briar_gold</color>
 	<color name="no_private_messages">#AAAAAA</color>
-	<color name="no_posts">#AAAAAA</color>
+	<color name="forum_avatar_shadow">#b3b3b3</color>
 
 	<color name="briar_primary">@color/briar_blue</color>
 	<color name="briar_primary_dark">@color/briar_blue_dark</color>
