--- a/briar-android/res/layout/fragment_keyagreement_qr.xml
+++ b/briar-android/res/layout/fragment_keyagreement_qr.xml
@@ -10,6 +10,11 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"/>
 
+	<org.briarproject.android.util.ViewfinderView
+		android:id="@+id/viewfinder_view"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"/>
+
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
