--- a/briar-android/res/layout/list_item_selectable_contact.xml
+++ b/briar-android/res/layout/list_item_selectable_contact.xml
@@ -22,7 +22,7 @@
 			android:layout_marginLeft="@dimen/listitem_horizontal_margin"
 			android:layout_marginStart="@dimen/listitem_horizontal_margin"
 			android:transitionName="avatar"
-			app:civ_border_color="@color/briar_text_primary"
+			app:civ_border_color="@color/briar_primary"
 			app:civ_border_width="@dimen/avatar_border_width"
 			tools:src="@drawable/ic_launcher"/>
 
