--- a/briar-android/res/layout/list_item_available_forum.xml
+++ b/briar-android/res/layout/list_item_available_forum.xml
@@ -9,10 +9,21 @@
 	android:paddingTop="@dimen/listitem_horizontal_margin"
 	android:background="?attr/selectableItemBackground">
 
+	<org.briarproject.android.util.TextAvatarView
+		android:id="@+id/avatarView"
+		android:layout_width="@dimen/avatar_forum_size"
+		android:layout_height="@dimen/avatar_forum_size"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true"
+		android:layout_marginRight="@dimen/listitem_horizontal_margin"
+		/>
+
 	<TextView
 		android:id="@+id/forumNameView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_toEndOf="@+id/avatarView"
+		android:layout_toRightOf="@+id/avatarView"
 		android:maxLines="2"
 		android:textColor="@android:color/primary_text_light"
 		android:textSize="@dimen/text_size_medium"
@@ -22,10 +33,10 @@
 		android:id="@+id/sharedByView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true"
 		android:layout_below="@+id/forumNameView"
 		android:layout_marginBottom="-8dp"
+		android:layout_toEndOf="@+id/avatarView"
+		android:layout_toRightOf="@+id/avatarView"
 		android:paddingTop="@dimen/margin_medium"
 		android:textColor="@android:color/secondary_text_light"
 		android:textSize="@dimen/text_size_small"
