--- a/briar-android/res/layout/list_item_contact.xml
+++ b/briar-android/res/layout/list_item_contact.xml
@@ -17,6 +17,7 @@
 
 		<de.hdodenhof.circleimageview.CircleImageView
 			android:id="@+id/avatarView"
+			style="@style/BriarAvatar"
 			android:layout_width="@dimen/listitem_picture_size"
 			android:layout_height="@dimen/listitem_picture_size"
 			android:layout_alignParentLeft="true"
@@ -24,8 +25,6 @@
 			android:layout_centerVertical="true"
 			android:layout_marginLeft="@dimen/listitem_horizontal_margin"
 			android:layout_marginStart="@dimen/listitem_horizontal_margin"
-			app:civ_border_color="@color/briar_primary"
-			app:civ_border_width="@dimen/avatar_border_width"
 			tools:src="@drawable/ic_launcher"/>
 
 		<LinearLayout
