--- a/briar-android/res/layout/text_avatar_view.xml
+++ b/briar-android/res/layout/text_avatar_view.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<de.hdodenhof.circleimageview.CircleImageView
 		android:id="@+id/avatarBackground"
+		style="@style/BriarAvatar"
 		android:layout_width="@dimen/avatar_forum_size"
 		android:layout_height="@dimen/avatar_forum_size"
 		android:layout_gravity="center"
 		android:src="@android:color/transparent"
-		app:civ_fill_color="@color/briar_button_positive"
-		app:civ_border_color="@color/briar_primary"
-		app:civ_border_width="@dimen/avatar_border_width"/>
+		app:civ_fill_color="@color/briar_button_positive"/>
 
 	<android.support.v7.widget.AppCompatTextView
 		android:id="@+id/textAvatarView"
@@ -29,4 +28,3 @@
 		tools:text="T"/>
 
 </merge>
-
