Add a new activity that shows sharing status of forum
The new activity shows who you are sharing a forum with and who shares a
forum with you. It is accessible from the overflow menu when in a forum.

Closes #398

--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -36,6 +36,7 @@
 
 	<!-- this is needed as preference_category_material layout uses this color as the text color -->
 	<color name="preference_fallback_accent_color">@color/briar_accent</color>
+	<color name="divider">#c1c1c1</color>
 	<color name="default_separator">#000000</color>
 	<color name="default_separator_inverted">#ffffff</color>
 	<color name="menu_background">#FFFFFF</color>
