--- a/briar-android/res/menu/forum_actions.xml
+++ b/briar-android/res/menu/forum_actions.xml
@@ -16,6 +16,11 @@
 		app:showAsAction="ifRoom"/>
 
 	<item
+		android:id="@+id/action_forum_sharing_status"
+		android:title="@string/forum_sharing_status"
+		app:showAsAction="never"/>
+
+	<item
 		android:id="@+id/action_forum_delete"
 		android:icon="@drawable/action_delete_white"
 		android:title="@string/forum_leave"
