This commit adds badges to the forum list that indicate unread posts.
It does so by extending the compound view `TextAvatarView` and provides
convienient setters that take care of the required UI changes.
The new badge can also be used to indicate a problem with the forum.

Closes #408

--- a/briar-android/res/drawable/bubble_problem.xml
+++ b/briar-android/res/drawable/bubble_problem.xml
@@ -8,14 +8,13 @@
 
 	<padding
 		android:left="@dimen/unread_bubble_padding_horizontal"
-		android:right="@dimen/unread_bubble_padding_horizontal"
-		android:bottom="1px"/>
+		android:right="@dimen/unread_bubble_padding_horizontal"/>
 
 	<solid
-		android:color="@color/briar_primary"/>
+		android:color="@color/briar_gold"/>
 
 	<stroke
-		android:color="@color/briar_text_primary_inverse"
+		android:color="@color/briar_primary"
 	    android:width="@dimen/avatar_border_width"/>
 
 </shape>
