--- a/briar-android/res/layout/list_item_available_forum.xml
+++ b/briar-android/res/layout/list_item_available_forum.xml
@@ -11,8 +11,8 @@
 
 	<org.briarproject.android.util.TextAvatarView
 		android:id="@+id/avatarView"
-		android:layout_width="@dimen/avatar_forum_size"
-		android:layout_height="@dimen/avatar_forum_size"
+		android:layout_width="@dimen/listitem_picture_frame_size"
+		android:layout_height="@dimen/listitem_picture_frame_size"
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
 		android:layout_marginRight="@dimen/listitem_horizontal_margin"
