--- a/briar-android/res/layout/list_item_forum.xml
+++ b/briar-android/res/layout/list_item_forum.xml
@@ -1,68 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:layout_marginLeft="@dimen/listitem_horizontal_margin"
 	android:layout_marginStart="@dimen/listitem_horizontal_margin"
-	android:paddingTop="@dimen/listitem_horizontal_margin"
 	android:background="?attr/selectableItemBackground">
 
 	<org.briarproject.android.util.TextAvatarView
 		android:id="@+id/avatarView"
-		android:layout_height="@dimen/avatar_forum_size"
-		android:layout_width="@dimen/avatar_forum_size"
-		android:layout_marginRight="@dimen/listitem_horizontal_margin"
+		android:layout_width="@dimen/listitem_picture_frame_size"
+		android:layout_height="@dimen/listitem_picture_frame_size"
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
-		/>
+		android:layout_centerVertical="true"
+		android:layout_marginRight="@dimen/listitem_horizontal_margin"/>
 
 	<TextView
 		android:id="@+id/forumNameView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_alignParentTop="true"
+		android:layout_marginTop="@dimen/listitem_horizontal_margin"
+		android:layout_toEndOf="@+id/avatarView"
+		android:layout_toRightOf="@+id/avatarView"
 		android:maxLines="2"
 		android:textColor="@color/briar_text_primary"
 		android:textSize="@dimen/text_size_medium"
-		tools:text="This is a name of a forum"
-		android:layout_alignParentTop="true"
-		android:layout_toRightOf="@+id/avatarView"
-		android:layout_toEndOf="@+id/avatarView"/>
+		tools:text="This is a name of a forum"/>
 
 	<TextView
 		android:id="@+id/unreadView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:paddingTop="@dimen/margin_medium"
+		android:layout_below="@+id/forumNameView"
+		android:layout_toEndOf="@+id/avatarView"
+		android:layout_toRightOf="@+id/avatarView"
 		android:paddingBottom="@dimen/listitem_horizontal_margin"
+		android:paddingTop="@dimen/margin_medium"
 		android:textColor="@color/briar_text_secondary"
 		android:textSize="@dimen/text_size_small"
-		android:text="@string/no_unread_posts"
-		android:layout_below="@+id/forumNameView"
-		android:layout_toRightOf="@+id/avatarView"
-		android:layout_toEndOf="@+id/avatarView"/>
+		tools:text="1337 posts"/>
 
 	<TextView
 		android:id="@+id/dateView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true"
+		android:layout_alignParentRight="true"
 		android:layout_below="@+id/forumNameView"
-		android:paddingTop="@dimen/margin_medium"
-		android:paddingBottom="@dimen/listitem_horizontal_margin"
-		android:layout_marginRight="@dimen/listitem_horizontal_margin"
 		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
+		android:layout_marginRight="@dimen/listitem_horizontal_margin"
+		android:paddingBottom="@dimen/listitem_horizontal_margin"
+		android:paddingTop="@dimen/margin_medium"
 		android:textColor="@color/briar_text_secondary"
 		android:textSize="@dimen/text_size_small"
 		tools:text="Dec 24"/>
 
-	<View style="@style/Divider.ForumList"
-	      android:layout_below="@+id/unreadView"
-	      android:layout_alignParentLeft="true"
-	      android:layout_alignParentStart="true"/>
+	<View
+		style="@style/Divider.ForumList"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true"
+		android:layout_below="@+id/unreadView"/>
 
 </RelativeLayout>
 
