Blog Fragment in Navigation Drawer with Tabs
This replaces the custom layouts in the navigation drawer with a
`NavigationView` and adds a menu entry for Blogs.

A Main Blogs fragment is added that holds a `TabLayout` and a
`ViewPager`. Five tabs are already added, but they just have a single
placeholder fragment that is to be replaced by the actual fragments.

Closes #409

--- a/briar-android/res/values/styles.xml
+++ b/briar-android/res/values/styles.xml
@@ -145,4 +145,14 @@
 		<item name="android:background">?android:attr/listDivider</item>
 	</style>
 
+	<style name="BriarTabLayout" parent="Widget.Design.TabLayout">
+		<item name="android:background">@color/briar_primary</item>
+		<item name="tabMode">scrollable</item>
+		<item name="tabMaxWidth">100dp</item>
+		<item name="tabIndicatorColor">@color/briar_text_primary_inverse</item>
+		<item name="tabIndicatorHeight">3dp</item>
+		<item name="tabSelectedTextColor">@color/briar_text_primary_inverse</item>
+		<item name="tabTextColor">@color/briar_text_primary_inverse</item>
+	</style>
+
 </resources>
