--- a/briar-android/res/layout/activity_nav_drawer.xml
+++ b/briar-android/res/layout/activity_nav_drawer.xml
@@ -13,7 +13,7 @@
 	<include
 		android:id="@+id/navigation_menu_drawer"
 		layout="@layout/navigation_menu"
-		android:layout_width="@dimen/nav_drawer_width"
+		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
 		android:layout_gravity="start"/>
 
