--- a/briar-android/res/layout/transports_list.xml
+++ b/briar-android/res/layout/transports_list.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:orientation="vertical"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content">
+	android:layout_height="wrap_content"
+	tools:showIn="@layout/navigation_menu">
 
 	<View style="@style/Divider.Horizontal"/>
 
@@ -12,6 +14,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:padding="@dimen/margin_medium"
-		android:numColumns="3"/>
+		android:numColumns="3"
+		tools:listitem="@layout/list_item_transport"/>
 
 </LinearLayout>
