--- a/briar-android/res/menu/blogs_my_blog_actions.xml
+++ b/briar-android/res/menu/blogs_my_blog_actions.xml
@@ -9,4 +9,10 @@
 		android:title="@string/blogs_write_blog_post"
 		app:showAsAction="ifRoom"/>
 
+	<item
+		android:id="@+id/action_delete_blog"
+		android:icon="@drawable/action_delete_white"
+		android:title="@string/blogs_delete_blog"
+		app:showAsAction="never"/>
+
 </menu>
