--- a/briar-android/res/values/themes.xml
+++ b/briar-android/res/values/themes.xml
@@ -42,6 +42,8 @@
 		<item name="colorPrimary">@color/briar_primary</item>
 		<item name="colorPrimaryDark">@color/briar_primary_dark</item>
 		<item name="colorAccent">@color/briar_accent</item>
+		<item name="buttonBarPositiveButtonStyle">@style/BriarButtonFlat.Positive</item>
+		<item name="buttonBarNegativeButtonStyle">@style/BriarButtonFlat.Negative</item>
 		<item name="android:textColorPrimary">@color/briar_text_primary</item>
 		<item name="android:textColorPrimaryInverse">@color/briar_text_primary_inverse</item>
 		<item name="android:textColorSecondary">@color/briar_text_secondary</item>
@@ -49,6 +51,12 @@
 		<item name="android:textColorTertiary">@color/briar_text_tertiary</item>
 		<item name="android:textColorTertiaryInverse">@color/briar_text_tertiary_inverse</item>
 		<item name="android:textColorLink">@color/briar_text_link</item>
+		<item name="android:windowAnimationStyle">@style/DialogAnimation</item>
+	</style>
+
+	<style name="DialogAnimation" parent="@android:style/Animation.Dialog">
+		<item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+		<item name="android:windowExitAnimation">@android:anim/fade_out</item>
 	</style>
 
 	<!-- This fixes a UI bug in the support preference library -->
