Separate Date and Author Name in Forum Posts
Closes #442

--- a/briar-android/res/layout/forum_discussion_cell.xml
+++ b/briar-android/res/layout/forum_discussion_cell.xml
@@ -98,6 +98,46 @@
 			tools:src="@drawable/ic_launcher"
 			/>
 
+		<TextView
+			android:id="@+id/author"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_toRightOf="@id/avatar"
+			android:layout_alignBottom="@+id/avatar"
+			android:layout_alignTop="@+id/avatar"
+			android:gravity="center"
+			android:ellipsize="end"
+			android:maxLines="1"
+			android:textSize="@dimen/text_size_tiny"
+			tools:text="John Smith"/>
+
+		<org.briarproject.android.util.TrustIndicatorView
+			android:id="@+id/trustIndicator"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_alignBottom="@+id/avatar"
+			android:layout_alignTop="@+id/avatar"
+			android:scaleType="center"
+			android:layout_marginLeft="@dimen/margin_small"
+			android:layout_marginStart="@dimen/margin_small"
+			android:layout_toRightOf="@+id/author"
+			tools:src="@drawable/trust_indicator_verified"/>
+
+		<TextView
+			android:id="@+id/date"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_alignBottom="@+id/avatar"
+			android:layout_alignTop="@+id/avatar"
+			android:gravity="center"
+			android:layout_toRightOf="@+id/trustIndicator"
+			android:layout_marginLeft="@dimen/margin_small"
+			android:layout_marginStart="@dimen/margin_small"
+			android:ellipsize="end"
+			android:maxLines="1"
+			android:textSize="@dimen/text_size_tiny"
+			tools:text="09:09"/>
+
 		<ImageView
 			android:id="@+id/chevron"
 			android:layout_width="wrap_content"
@@ -131,34 +171,12 @@
 			android:layout_height="wrap_content"
 			android:layout_alignBaseline="@id/btn_reply"
 			android:layout_toLeftOf="@id/btn_reply"
-			android:layout_toRightOf="@+id/trustIndicator"
+			android:layout_toRightOf="@+id/date"
 			android:gravity="right|end"
 			android:maxLines="1"
 			android:padding="@dimen/margin_medium"
 			android:textSize="@dimen/text_size_tiny"
 			tools:text="2 replies"/>
-
-		<TextView
-			android:id="@+id/date"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignBaseline="@id/replies"
-			android:layout_toRightOf="@id/avatar"
-			android:ellipsize="end"
-			android:maxLines="1"
-			android:textSize="@dimen/text_size_tiny"
-			tools:text="09:09 John Smith"/>
-
-		<org.briarproject.android.util.TrustIndicatorView
-			android:id="@+id/trustIndicator"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignBottom="@+id/date"
-			android:layout_alignTop="@+id/date"
-			android:layout_marginLeft="@dimen/margin_small"
-			android:layout_marginStart="@dimen/margin_small"
-			android:layout_toRightOf="@+id/date"
-			tools:src="@drawable/trust_indicator_verified"/>
 
 		<View
 			android:id="@+id/top_divider"
